--- a/css/creative.css
+++ b/css/creative.css
@@ -23,6 +23,12 @@ hr.light {
 hr.small {
     max-width: 100px;
 }
+.h3, h3{
+  font-size: 20px;
+}
+p{
+  font-weight: 300;
+}
 a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
