atualizacao com mapa google maps, e novas informacoes

--- a/css/creative.css
+++ b/css/creative.css
@@ -355,7 +355,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/bg.jpg');
+  /*background-image: url('../img/bg.jpg');*/
   text-align: center;
 }
 header .header-content {
